--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,9 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@tabler/icons-react": "^3.34.1",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
